// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Summary Status Component should allow label to be optional 1`] = `
<div
  class="monSummaryStatusNoWrap"
>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-m-spaceBetween-center-row"
  >
    <div
      class="euiFlexItem eui-textTruncate emotion-euiFlexItem-growZero"
      style="max-width:200px"
    >
      <div
        class="euiStat monSummaryStatusNoWrap__stat emotion-euiStat-left"
        data-test-subj="status"
      >
        <div
          class="euiText euiStat__description emotion-euiText-s"
        >
          <p>
            Status
          </p>
        </div>
        <p
          class="euiTitle euiStat__title emotion-euiTitle-xxxs-euiStat__title-default"
        >
          Status: 
          <span
            alt="Status: yellow"
            color="warning"
            data-euiicon-type="dot"
            data-test-subj="statusIcon"
          />
           Yellow
        </p>
      </div>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
      data-test-subj="transportAddress"
      style="max-width:200px"
    >
      <div
        class="euiStat monSummaryStatusNoWrap__stat emotion-euiStat-left"
      >
        <div
          class="euiText euiStat__description emotion-euiText-s"
        >
          <p />
        </div>
        <p
          class="euiTitle euiStat__title emotion-euiTitle-xxxs-euiStat__title-default"
        >
          127.0.0.1:9300
        </p>
      </div>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
      data-test-subj="documentCount"
      style="max-width:200px"
    >
      <div
        class="euiStat monSummaryStatusNoWrap__stat emotion-euiStat-left"
      >
        <div
          class="euiText euiStat__description emotion-euiText-s"
        >
          <p>
            Documents
          </p>
        </div>
        <p
          class="euiTitle euiStat__title emotion-euiTitle-xxxs-euiStat__title-default"
        >
          24.8k
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Summary Status Component should allow status to be optional 1`] = `
<div
  class="monSummaryStatusNoWrap"
>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-m-spaceBetween-center-row"
  >
    <div
      class="euiFlexItem eui-textTruncate emotion-euiFlexItem-growZero"
      style="max-width:200px"
    />
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
      data-test-subj="freeDiskSpace"
      style="max-width:200px"
    >
      <div
        class="euiStat monSummaryStatusNoWrap__stat emotion-euiStat-left"
      >
        <div
          class="euiText euiStat__description emotion-euiText-s"
        >
          <p>
            Free Disk Space
          </p>
        </div>
        <p
          class="euiTitle euiStat__title emotion-euiTitle-xxxs-euiStat__title-default"
        >
          173.9 GB
        </p>
      </div>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
      data-test-subj="documentCount"
      style="max-width:200px"
    >
      <div
        class="euiStat monSummaryStatusNoWrap__stat emotion-euiStat-left"
      >
        <div
          class="euiText euiStat__description emotion-euiText-s"
        >
          <p>
            Documents
          </p>
        </div>
        <p
          class="euiTitle euiStat__title emotion-euiTitle-xxxs-euiStat__title-default"
        >
          24.8k
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Summary Status Component should render metrics in a summary bar 1`] = `
<div
  class="monSummaryStatusNoWrap"
>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-m-spaceBetween-center-row"
  >
    <div
      class="euiFlexItem eui-textTruncate emotion-euiFlexItem-growZero"
      style="max-width:200px"
    >
      <div
        class="euiStat monSummaryStatusNoWrap__stat emotion-euiStat-left"
        data-test-subj="status"
      >
        <div
          class="euiText euiStat__description emotion-euiText-s"
        >
          <p>
            Status
          </p>
        </div>
        <p
          class="euiTitle euiStat__title emotion-euiTitle-xxxs-euiStat__title-default"
        >
          Status: 
          <span
            alt="Status: green"
            color="success"
            data-euiicon-type="dot"
            data-test-subj="statusIcon"
          />
           Green
        </p>
      </div>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
      data-test-subj="freeDiskSpace"
      style="max-width:200px"
    >
      <div
        class="euiStat monSummaryStatusNoWrap__stat emotion-euiStat-left"
      >
        <div
          class="euiText euiStat__description emotion-euiText-s"
        >
          <p>
            Free Disk Space
          </p>
        </div>
        <p
          class="euiTitle euiStat__title emotion-euiTitle-xxxs-euiStat__title-default"
        >
          173.9 GB
        </p>
      </div>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
      data-test-subj="documentCount"
      style="max-width:200px"
    >
      <div
        class="euiStat monSummaryStatusNoWrap__stat emotion-euiStat-left"
      >
        <div
          class="euiText euiStat__description emotion-euiText-s"
        >
          <p>
            Documents
          </p>
        </div>
        <p
          class="euiTitle euiStat__title emotion-euiTitle-xxxs-euiStat__title-default"
        >
          24.8k
        </p>
      </div>
    </div>
  </div>
</div>
`;
